2003-10-06   Gisle Aas <gisle@ActiveState.com>

   Release 1.27

   The URI module is now less strict about the values accepted
   for gopher_type attribute of gopher:-URLs.  Patch suggested
   by the Net::Gopher author; William G. Davis.



2003-10-03   Gisle Aas <gisle@ActiveState.com>

   Release 1.26

   Help Storable deal with URI objects.  Patch contributed
   by <talby@trap.mtview.ca.us>.

   Fix failure under OS/2.  Patch contributed by Ilya Zakharevich.



2003-08-18   Gisle Aas <gisle@ActiveState.com>

   Release 1.25

   Allow literal '@' in userinfo.  If there are multiple '@' chars
   in the 'authority' component use the last (instead of first) as
   the 'userinfo' delimiter.

   Make URI->query_form escape '[' and ']'.  These chars where added
   to the reserved set in RFC 2732.  This also match MSIE behaviour.

   Silience warning from 'sip' support class.



2003-07-24   Gisle Aas <gisle@ActiveState.com>

   Release 1.24

   Relative URIs that start with the query string directly (i.e. "?q")
   are now absolutized as specified in rfc2396bis.  See:
   http://www.apache.org/~fielding/uri/rev-2002/issues.html#003-relative-query
   
   Added URI::Split module.  It's a lightweight module that can be
   used to parse and compose URI string to/from its component parts.

   The rel() method will now work from canonical URIs.  That allow it
   to extract a relative URI in more cases.



2003-01-01   Gisle Aas <gisle@ActiveState.com>

   Release 1.23

   Support for tn3270 URIs.

   Use anchored DNS lookups in URI::Heuristic as suggested
   by Malcolm Weir <malc@gelt.org>.

   Delay calculation of MY_COUNTRY() in URI::Heuristic.
   Patch by Ed Avis <ed@membled.com>.

   Make test suite work for UNC paths.
   Patch by Warren Jones <wjones@fluke.com>.



2002-09-02   Gisle Aas <gisle@ActiveState.com>

   Release 1.22

   Added URI::QueryParam module.  It contains some
   extra methods to manipulate the query form
   key/value pairs.
